@@ -1,3 +1,7 @@
+Sep 11, 2014 - chris ---------------------------------------------------
+o issue #38: temporary transactions and recovery (w/o transactions)
+       created huge logfiles; fixed
+
 Aug 21, 2014 - chris ---------------------------------------------------
 o Fixed segfault when opening a file with HAM_ENABLE_RECOVERY (and
 	without HAM_ENABLE_TRANSACTIONS)
